# wasm-game-of-life

./: .gitignore  Cargo.toml  LICENSE  README.md  index.d.ts  index.html  index.ts  make_assets.sh  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/workflows/: jekyll-gh-pages.yml
assets/: 3c10piwave.cells  bananaspark.cells  cell.cells  dot.cells  index.ts  zebrastripes.cells
src/: lib.rs  parser.rs
