[package]
name = "wasm-game-of-life"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
fixedbitset = "0.4.2"
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3.61"
features = [
  "CanvasRenderingContext2d",
  "CssStyleDeclaration",
  "Document",
  "Element",
  "EventTarget",
  "HtmlCanvasElement",
  "HtmlElement",
  "MouseEvent",
  "Node",
  "Window",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

